--- a/bomberman/pom.xml
+++ b/bomberman/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>groupId</groupId>
-    <artifactId>bomberman</artifactId>
+    <artifactId>bombermanGame</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
