--- a/BombermanServer/src/main/resources/application.properties
+++ b/BombermanServer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/bomberman_db
+spring.datasource.url=jdbc:mysql://localhost:3306/bomberman_db
 spring.datasource.username=bomberman
 spring.datasource.password=bomberman
