--- a/BombermanWeb/src/main/resources/application.properties
+++ b/BombermanWeb/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/bomberman_db?useUnicode=true&u
 spring.datasource.username=bomberman
 spring.datasource.password=bomberman
 #logging.level.org.springframework.web=DEBUG
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
