--- a/BombermanWeb/pom.xml
+++ b/BombermanWeb/pom.xml
@@ -12,8 +12,8 @@
     </parent>
 
     <groupId>ua.info.m1.bomberman</groupId>
-    <artifactId>game</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <artifactId>BombermanWeb</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <name>game</name>
 
     <properties>
