--- a/BombermanWeb/src/main/resources/application.properties
+++ b/BombermanWeb/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/bomberman_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Europe/Paris
 spring.datasource.username=bomberman
 spring.datasource.password=bomberman
-logging.level.org.springframework.web=DEBUG
+#logging.level.org.springframework.web=DEBUG
 spring.mvc.view.prefix=/WEB-INF/html/
 spring.mvc.view.suffix=.html
 spring.thymeleaf.cache=false
